# Jay-Mixing-PlugIn-

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build.yml
plugin/: CMakeLists.txt  README.md
plugin/Source/: Dsp.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
plugin/docs/: LOGIC_PRO.md
plugin/tests/: dsp_parity.cpp  verify_dsp_parity.py
src/mixassist/: __init__.py  cli.py  separate.py  webapp.py
src/mixassist/analysis/: __init__.py  classify.py  features.py  metrics.py  spectrum.py
src/mixassist/audio/: __init__.py  buffer.py  io.py
src/mixassist/dsp/: __init__.py  backend.py  biquad.py  compressor.py  delay.py  eq.py  fft.py  gain.py  loudness.py  onset.py  reverb.py  saturation.py
src/mixassist/examples/: __init__.py  generate_stems.py
src/mixassist/learn/: __init__.py  corpus.py  feedback.py
src/mixassist/mixing/: __init__.py  config.py  engine.py  profiles.py  reference.py  report.py  suggestions.py  targets.py
src/mixassist/realtime/: __init__.py  blocks.py  preset.py
src/mixassist/viz/: __init__.py  dashboard.py  svg.py
tests/: conftest.py  test_analysis.py  test_audio_io.py  test_backend.py  test_config.py  test_dashboard.py  test_dsp.py  test_engine.py  test_feedback.py  test_fx.py  test_gainstage.py  test_learn.py  test_metrics.py  test_mixmode.py  test_plugin_dsp.py  test_preset.py  test_profiles.py  test_realtime.py  test_separate.py  test_sidechain.py  test_suggestions.py  test_webapp.py
