[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mixassist"
version = "0.1.0"
description = "AI-assisted mixing engine for Logic Pro stems (Phase 1: analysis + rule-based mixing, pure stdlib)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Mixing Assistant" }]
keywords = ["audio", "mixing", "dsp", "logic-pro", "mastering"]
dependencies = []  # Phase 1 intentionally has zero third-party runtime deps.

[project.scripts]
mixassist = "mixassist.cli:main"

[project.optional-dependencies]
dev = ["pytest", "ruff", "black", "mypy"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = [
    "E741",   # ambiguous variable name (we use l/r for left/right occasionally)
    "SIM108", # explicit if/else is clearer than ternaries in tight DSP loops
]

[tool.ruff.lint.per-file-ignores]
# The web app embeds an HTML/CSS/JS page as a string literal; those lines are not
# meaningfully wrappable to 100 cols.
"src/mixassist/webapp.py" = ["E501"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
warn_unused_ignores = true
ignore_missing_imports = true
files = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
